# mh3u_fish_finder_cli

./: Cargo.toml  LICENSE  README.md  TODO
src/: main.rs
