[package]
name = "mh3u_fish_finder"
description = "Find your charm table in Monster Hunter 3 Ultimate using the Moga Village fishing result method popularized by mhvuze. Based on AthenaADP's MH3U-Fish-Finder program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
