[package]
name = "mh3u_fish_finder_cli"
description = "Find your charm table in Monster Hunter 3 Ultimate using the Moga fishing result method popularized by MHVuze. Based on AthenaADP's well-known MH3U-Fish-Finder program. Cross-platform."
version = "1.0.0"
edition = "2021"
license = "RPL-1.5"

[dependencies]
